# markov-to-transformers

./: README.md  pyproject.toml  setup.sh
models/: MLP.py  markov-model.py  positional_MLP.py
notebooks/: A Neural Probabilistic Model.ipynb  Multilayer Perceptron for Next Character Prediction.ipynb  Positional Embeddings and MLP Character-Level Name Generation.ipynb  Trigram-based Markov Model for Name Generation.ipynb  char2image-mlp.ipynb  turkish-namegen-bn-folding.ipynb  turkish_name_generator.ipynb
work_in_progress/: build_makemore_backprop_ninja.ipynb
